--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="authoring-tool" content="Adobe_Animate_CC" />
-  <title>SAMOE_GeLD_SEC_SEC_G12_STAT_SM1_L1_01_L3_01_Activity_LO03_O05_NGRD_V.1.0</title>
+  <title>Activity Drag and Click</title>
   <link rel="stylesheet" href="css/style.css" />
   <script src="libs/createjs.min.js"></script>
   <script src="libs/howler.js"></script>
