--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="authoring-tool" content="Adobe_Animate_CC" />
-  <title>SAMOE_GeLD_SEC_SEC_G12_STAT_SM1_L1_01_L3_01_Activity_LO03_O05_NGRD_V.1.0</title>
+  <title>Activity Drag and Click</title>
   <link rel="stylesheet" href="css/style.css" />
   <script src="libs/createjs.min.js"></script>
   <script src="libs/howler.js"></script>
@@ -20,7 +20,7 @@
       style="pointer-events:none; overflow:hidden; width:100%; height:100%; position: absolute; left: 0px; top: 0px;">
     </div>
   </div>
-  <video id='videoPlay' style="display:block; position: absolute;  width:100%; height:100%;" controls autoplay
+  <video id='videoPlay' style="display:block; position: absolute;  width:100%; height:100%;" autoplay
     src="vid/intro.mp4" type="vid/intro/mp4"></video>
 </body>
 
