--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       style="pointer-events:none; overflow:hidden; width:100%; height:100%; position: absolute; left: 0px; top: 0px;">
     </div>
   </div>
-  <video id='videoPlay' style="display:block; position: absolute;  width:100%; height:100%;" autoplay
+  <video id='videoPlay' style="display:block; position: absolute;  width:100%; height:100%;" autoplay controls
     src="vid/intro.mp4" type="vid/intro/mp4"></video>
 </body>
 
